# xmipp4-compute-metal

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
conda.recipe/: bld.bat  meta.yaml
src/: metal_plugin.cpp  metal_plugin.hpp  metal_plugin_hook.cpp
src/compute/metal/: metal_device.cpp  metal_device.hpp  metal_device_backend.cpp  metal_device_backend.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/src/: test_load.cpp
